// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
<span
  className="sc-jFAcUc fIRgvr"
  size="xsmall"
>
  Default
</span>
`;

exports[`Badge renders with custom background color 1`] = `
<span
  className="sc-jFAcUc fJhyjv"
  size="xsmall"
>
  Default
</span>
`;

exports[`Badge renders with icons 1`] = `
<div
  className="flex justify-around w-full"
>
  <span
    className="sc-jFAcUc fIRgvr"
    size="xsmall"
  >
    Default
  </span>
  <span
    className="sc-jFAcUc fIRgvr"
    size="xsmall"
  >
    Default
  </span>
</div>
`;

exports[`Badge renders with small size 1`] = `
<span
  className="sc-jFAcUc hYIyhc"
  size="small"
>
  Default
</span>
`;
